# sprocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SprocketWorkspace.code-workspace  imgui.ini  main.cpp
Anvil/: Anvil.cpp  Anvil.dm.cpp  Anvil.h  Anvil.m.cpp  CMakeLists.txt  Camera.cpp  Camera.h  EditorLayer.cpp  EditorLayer.h  EditorState.h  EditorUI.cpp  EditorUI.h  EscapeMenu.cpp  EscapeMenu.h  Inspector.cpp  Inspector.dm.cpp  Inspector.dmx.py  Inspector.h  Main.m.cpp  WorldLayer.cpp  WorldLayer.h  anvil.cpp  anvil.dm.cpp  anvil.h  anvil.m.cpp  camera.cpp  camera.h  components.json  inspector.cpp  inspector.dm.cpp  inspector.dmx.py  inspector.h  particle_system.cpp  particle_system.h  physics_system.cpp  physics_system.h  rendering.cpp  rendering.h  runtime.cpp  runtime.h  (+4 more)
Anvil/Panels/: EntityList.cpp  EntityList.h  Inspector.cpp  Inspector.dm.cpp  Inspector.dm_plugin.py  Inspector.dmx.py  Inspector.h  MaterialViewer.cpp  MaterialViewer.h
Anvil/ecs/: CMakeLists.txt  ecs.h  loader.cpp  loader.h  lua_ecs.cpp  meta.h  scene.cpp  scene.h
Game/: CMakeLists.txt  CircadianCycle.cpp  CircadianCycle.h  EditorUI.cpp  EditorUI.h  EscapeMenu.cpp  EscapeMenu.h  Game.cpp  Game.h  Game.m.cpp  GameGrid.cpp  GameGrid.h  LoadingScreen.cpp  LoadingScreen.h  Main.m.cpp  MainMenu.cpp  MainMenu.h  Palette.h  PathCalculator.cpp  PathCalculator.h  PathFollower.cpp  PathFollower.h  UILayer.cpp  UILayer.h  WorldLayer.cpp  WorldLayer.h  WorldSceneInfo.cpp  WorldSceneInfo.h  components.json  day_night_cycle.h  game.m.cpp  game_grid.cpp  game_grid.h  grid_helpers.cpp  grid_helpers.h  path_calculator.cpp  script_system.h
Game/ecs/: CMakeLists.txt  ecs.h  loader.cpp  loader.h  lua_ecs.cpp  lua_ecs.h  meta.h  scene.cpp  scene.h  yaml_ecs.cpp
Runtime/: CMakeLists.txt  Camera.h  Console.cpp  Console.h  EditorLayer.cpp  EditorLayer.h  Main.m.cpp  Runtime.cpp  Runtime.h  Runtime.m.cpp
Sprocket/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  ComponentSpec.json  Entity.cpp  Entity.h  Entry.cpp  Entry.h  GenerateComponents.py  Keyboard.cpp  Keyboard.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Light.cpp  Light.h  Loader.cpp  Loader.h  Log.cpp  Log.h  Maths.cpp  Maths.h  Model.cpp  Mouse.cpp  Mouse.h  ObjParser.cpp  ObjParser.h  RawModel.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  Shader.cpp  Shader.h  Sprocket.h  (+6 more)
Sprocket/3D/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Loader.cpp  Loader.h  Model.cpp  Model.h  ObjParser.cpp  ObjParser.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Sprocket/Audio/: Listener.cpp  Listener.h  Music.cpp  Music.h  Sound.cpp  Sound.h  listener.cpp  listener.h  music.cpp  music.h  sound.cpp
Sprocket/Core/: Accessor.cpp  Accessor.h  App.cpp  App.h  AssetManager.cpp  AssetManager.h  CoreSystems.cpp  CoreSystems.h  Events.h  GameLoop.h  Initialiser.cpp  Initialiser.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  game_loop.h  log.cpp  log.h  sound.cpp  sound.h  timer.h  (+2 more)
Sprocket/Datamatic/: anvil_inspector.py  lua_backend.py  lua_bindings.py  serialiser.py
Sprocket/DevGUI/: DevGUI.cpp  DevGUI.h
Sprocket/Display/: Button.cpp  Button.h  ColourPalette.cpp  ColourPalette.h  Container.cpp  Container.h  Image.cpp  Image.h  Quad.cpp  Quad.h  Slider.cpp  Slider.h  TextBox.cpp  TextBox.h  UiComponent.cpp  Widget.cpp  Widget.h
Sprocket/Entities/: ComponentBuilder.py  ComponentSpec.py  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntitySystem.cpp  EntitySystem.h  GenerateComponents.py  NewScene.cpp  NewScene.h  NewSystem.h  Serialiser.cpp  Serialiser.h
Sprocket/Events/: Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
Sprocket/Graphics/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  DepthBuffer.cpp  DepthBuffer.h  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  InstanceBuffer.cpp  InstanceBuffer.h  Light.cpp  Light.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model2D.cpp  Model2D.h  Model3D.cpp  Model3D.h  Model3DLoader.cpp  Model3DLoader.h  ModelLoader.cpp  ModelLoader.h  MousePicker.cpp  MousePicker.h  (+62 more)
Sprocket/Models/: RawModel.cpp  RawModel.h  TexturedModel.cpp  TexturedModel.h
Sprocket/Objects/: CameraUtils.cpp  CameraUtils.h  Entity.cpp  Entity.h  Image.cpp  Image.h  InteractiveQuad.cpp  InteractiveQuad.h  Light.h  Material.cpp  Material.h  Quad.cpp  Quad.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h
Sprocket/Physics/: physics_engine.cpp  physics_engine.h
Sprocket/Scene/: Camera.cpp  Camera.h  Components.dm.h  Components.h  ECS.cpp  ECS.dm.h  ECS.h  Entity.cpp  Entity.h  EntitySystem.h  Loader.cpp  Loader.dm.cpp  Loader.dmx.py  Loader.h  Scene.cpp  Scene.dm.h  Scene.h  SceneManager.cpp  SceneManager.h  SceneRunner.cpp  SceneRunner.h  Serialiser.cpp  SystemList.cpp  SystemList.h  Updater.cpp  Updater.h  camera.cpp  camera.h  ecs.dm.h  ecs.h  ecs_plugin.dmx.py  loader.cpp  loader.dm.cpp  loader.dmx.py  loader.h  lua_ecs.cpp  lua_ecs.dm.cpp  lua_ecs.dm.h  lua_ecs.h  meta.dm.h  (+8 more)
Sprocket/Scripting/: Lua.cpp  Lua.dm_plugin.py  Lua.dmx.py  Lua.h  LuaCamera.cpp  LuaCamera.h  LuaComponents.cpp  LuaComponents.h  (+42 more)
Workshop/: CMakeLists.txt  EditorUI.cpp  EscapeMenu.cpp  EscapeMenu.h  Workshop.cpp  Workshop.m.cpp  WorldLayer.cpp  WorldLayer.h
game/: CMakeLists.txt  components.json  day_night_cycle.cpp  game.cpp  game.h  game.m.cpp  game_grid.cpp  grid_helpers.cpp  grid_helpers.h  palette.h  path_calculator.cpp  script_system.h
kinematica/: CMakeLists.txt  kinematica.m.cpp
sprocket/: CMakeLists.txt  core.h
(+547 files in other folders)
